# GameProject

./: .gitignore  CMakeLists.txt  main.cpp
Entities/: AllEntities.h  Entity.cpp  Entity.h  EntityBehaviour.cpp  EntityBehaviour.h  Monster.cpp  Monster.h  Player.cpp  Player.h
Utility/: Action.cpp  Action.h  CustomFunctions.cpp  CustomFunctions.h  campaign.cpp  campaign.h  engine.cpp  engine.h
